fix dark mode

--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -281,7 +281,7 @@ ul[class="row"] {
   float: left;
   padding: 0.5rem;
 }
-[data-section-theme=“dark”] {
+[data-section-theme="dark"] {
   --text-color: var(--color-white);
   --section-title-color: var(--color-white);
   --button-color: var(--color-white);
